<resources>
    <string name="app_name">Banking</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_notification">Notifications</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_pay">Pay</string>
    <string name="title_activity_simple_tabs">Banking</string>
</resources>
