<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!-- Menu bar layout -->
    <item
        android:id="@+id/action_pay"
        android:icon="@mipmap/ic_payment"
        android:title="@string/action_pay"
        android:orderInCategory="0"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_profile"
        android:icon="@mipmap/ic_person"
        android:title="@string/action_profile"
        android:orderInCategory="1"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_notification"
        android:icon="@mipmap/ic_notifications"
        android:title="@string/action_notification"
        android:orderInCategory="2"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
